chore: use pnpm instead of npm (#1538)
* CI: pin GitHub Action version

* Implement code changes to enhance functionality and improve performance

* ci: replace 'pnpm ci' with 'pnpm install' in workflows for consistency

* chore: add pnpm workspace configuration with package paths and built dependencies

* chore: update textlint dependency to use workspace protocol in package.json files

* chore: add @types/debug dependency and update pnpm workspace overrides

* chore: update package.json and pnpm-lock.yaml to add @types/node dependency and remove pnpm overrides

* add unist

* add unist

* chore: update CI workflow to install pnpm and modify build commands to use pnpm

* fix

* Update packages/@textlint/fixer-formatter/package.json+2

* Update packages/@textlint/text-to-ast/package.json+1

* Update packages/@textlint/text-to-ast/package.json+2

* Update packages/@textlint/textlint-plugin-markdown/package.json+6

* Update packages/textlint/package.json+1

* Update dependencies in package.json and pnpm-lock.yaml to include @textlint/types

* tsconfig.json: Add reference to @textlint/types

* Update @types/node version in package.json and pnpm-lock.yaml

* package.json and pnpm-lock.yaml: Add unist-util-select dependency

* テストファイルでの@textlint/kernelから@textlint/typesへのインポートを更新

* package.json and pnpm-lock.yaml: Update @types/node to version 22.10.6

* package.json and pnpm-lock.yaml: Update @types/node to version ^20.0.0

* fix bin path

* Update .github/workflows/ci.yml+5

* CONTRIBUTING.md: Update package manager commands from npm to pnpm
netlify.toml: Update NODE_VERSION to 22 and remove PNPM_VERSION

* pnpm-workspace.yaml: Add verifyDepsBeforeRun configuration

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,10 @@ jobs:
     if: github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch'
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
       - name: Set PACKAGE_VERSION
         run: echo "PACKAGE_VERSION=$(cat lerna.json | jq -r .version)" >> $GITHUB_ENV
       - name: Tag Check
@@ -59,11 +62,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Setup Node
-        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
+        uses: actions/setup-node@3235b876344d2a9aa001b8d1453c930bba69e610 # v3.9.1
         with:
-          cache: 'npm'
+          cache: 'pnpm'
           node-version: 22
-          # for publishing packages to npm
+          # for publishing packages to pnpm
           registry-url: https://registry.npmjs.org
       - name: Git Identity
         run: |
@@ -75,9 +78,9 @@ jobs:
       - name: Set PACKAGE_VERSION
         run: echo "PACKAGE_VERSION=$(cat lerna.json | jq -r .version)" >> $GITHUB_ENV
       - name: Install
-        run: npm ci
+        run: pnpm install
       - name: Publish
-        run: npm run ci:release
+        run: pnpm run ci:release
         env:
           # actions/setup-node create .npmrc with `NODE_AUTH_TOKEN` env if `registry-url` is defined
           # === `echo "${ registry-url }/:_authToken=${ NODE_AUTH_TOKEN }" > .npmrc`
@@ -93,7 +96,7 @@ jobs:
           git_tag_prefix: "v"
       - name: Create Release
         id: create_release
-        uses: softprops/action-gh-release@da05d552573ad5aba039eaac05058a918a7bf631 # v2.2.2
+        uses: softprops/action-gh-release@72f2c25fcb47643c292f7107632f7a47c1df5cd8 # v2.3.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
