--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@monorepo-utils/workspaces-to-typescript-project-references": "^2.11.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "ajv": "^8.17.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -42,8 +43,7 @@
     "lint-staged": "^13.3.0",
     "npm-run-all2": "^5.0.2",
     "prettier": "^2.7.1",
-    "typescript": "~5.3.3",
-    "ajv": "^8.17.1"
+    "typescript": "~5.3.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css}": [
@@ -56,13 +56,6 @@
     "tabWidth": 4,
     "trailingComma": "none"
   },
-  "workspaces": [
-    "packages/*",
-    "examples/*",
-    "packages/@textlint/*",
-    "packages/textlint-scripts/examples/*",
-    "test/*",
-    "website"
-  ],
-  "packageManager": "npm@9.9.2"
+
+  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
 }
