--- a/packages/@textlint/config-loader/package.json
+++ b/packages/@textlint/config-loader/package.json
@@ -45,15 +45,16 @@
         "trailingComma": "none"
     },
     "dependencies": {
-        "@textlint/kernel": "^14.8.1",
-        "@textlint/module-interop": "^14.8.1",
-        "@textlint/resolver": "^14.8.1",
-        "@textlint/types": "^14.8.1",
-        "@textlint/utils": "^14.8.1",
+        "@textlint/kernel": "workspace:*",
+        "@textlint/module-interop": "workspace:*",
+        "@textlint/resolver": "workspace:*",
+        "@textlint/types": "workspace:*",
+        "@textlint/utils": "workspace:*",
         "debug": "^4.4.1",
         "rc-config-loader": "^4.1.3"
     },
     "devDependencies": {
+        "@types/debug": "^4.1.12",
         "@types/mocha": "^9.1.1",
         "@types/node": "^18.19.9",
         "mocha": "^10.8.1",
