--- a/packages/@textlint/fixer-formatter/package.json
+++ b/packages/@textlint/fixer-formatter/package.json
@@ -38,9 +38,9 @@
     "test": "mocha"
   },
   "dependencies": {
-    "@textlint/module-interop": "^14.8.1",
-    "@textlint/resolver": "^14.8.1",
-    "@textlint/types": "^14.8.1",
+    "@textlint/module-interop": "workspace:*",
+    "@textlint/resolver": "workspace:*",
+    "@textlint/types": "workspace:*",
     "chalk": "^4.1.2",
     "debug": "^4.4.1",
     "diff": "^5.2.0",
@@ -49,6 +49,7 @@
     "text-table": "^0.2.0"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.12",
     "@types/diff": "^4.0.2",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.19.9",
