--- a/packages/@textlint/markdown-to-ast/package.json
+++ b/packages/@textlint/markdown-to-ast/package.json
@@ -1,61 +1,63 @@
 {
-    "name": "@textlint/markdown-to-ast",
-    "version": "14.8.1",
-    "description": "Parse Markdown to AST with location info.",
-    "homepage": "https://github.com/textlint/textlint/tree/master/packages/@textlint/markdown-to-ast/",
-    "bugs": {
-        "url": "https://github.com/textlint/textlint/issues"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/textlint/textlint.git"
-    },
-    "license": "MIT",
-    "author": "azu",
-    "type": "commonjs",
-    "main": "lib/src/index.js",
-    "module": "module/src/index.js",
-    "types": "lib/src/index.d.ts",
-    "directories": {
-        "test": "test/"
-    },
-    "files": [
-        "bin/",
-        "lib/",
-        "module/",
-        "src/",
-        "!*.tsbuildinfo"
-    ],
-    "scripts": {
-        "build": "tsc -b && tsc -b tsconfig.module.json",
-        "clean": "rimraf lib/ module/",
-        "prepack": "npm run --if-present build",
-        "test": "mocha",
-        "updateSnapshot": "npm run build && node tools/update-fixtures.js",
-        "watch": "tsc -b --watch"
-    },
-    "dependencies": {
-        "@textlint/ast-node-types": "^14.8.1",
-        "debug": "^4.4.1",
-        "mdast-util-gfm-autolink-literal": "^0.1.3",
-        "neotraverse": "^0.6.15",
-        "remark-footnotes": "^3.0.0",
-        "remark-frontmatter": "^3.0.0",
-        "remark-gfm": "^1.0.0",
-        "remark-parse": "^9.0.0",
-        "unified": "^9.2.2"
-    },
-    "devDependencies": {
-        "@textlint/ast-tester": "^14.8.1",
-        "@types/mocha": "^9.1.1",
-        "@types/node": "^18.19.9",
-        "mkdirp": "^1.0.4",
-        "mocha": "^10.8.1",
-        "rimraf": "^6.0.1",
-        "ts-node": "^10.9.2",
-        "typescript": "~5.3.3"
-    },
-    "publishConfig": {
-        "access": "public"
-    }
+  "name": "@textlint/markdown-to-ast",
+  "version": "14.8.1",
+  "description": "Parse Markdown to AST with location info.",
+  "homepage": "https://github.com/textlint/textlint/tree/master/packages/@textlint/markdown-to-ast/",
+  "bugs": {
+    "url": "https://github.com/textlint/textlint/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/textlint/textlint.git"
+  },
+  "license": "MIT",
+  "author": "azu",
+  "type": "commonjs",
+  "main": "lib/src/index.js",
+  "module": "module/src/index.js",
+  "types": "lib/src/index.d.ts",
+  "directories": {
+    "test": "test/"
+  },
+  "files": [
+    "bin/",
+    "lib/",
+    "module/",
+    "src/",
+    "!*.tsbuildinfo"
+  ],
+  "scripts": {
+    "build": "tsc -b && tsc -b tsconfig.module.json",
+    "clean": "rimraf lib/ module/",
+    "prepack": "npm run --if-present build",
+    "test": "mocha",
+    "updateSnapshot": "npm run build && node tools/update-fixtures.js",
+    "watch": "tsc -b --watch"
+  },
+  "dependencies": {
+    "@textlint/ast-node-types": "workspace:*",
+    "debug": "^4.4.1",
+    "mdast-util-gfm-autolink-literal": "^0.1.3",
+    "neotraverse": "^0.6.15",
+    "remark-footnotes": "^3.0.0",
+    "remark-frontmatter": "^3.0.0",
+    "remark-gfm": "^1.0.0",
+    "remark-parse": "^9.0.0",
+    "unified": "^9.2.2"
+  },
+  "devDependencies": {
+    "@textlint/ast-tester": "workspace:*",
+    "@types/unist": "^3.0.3",
+    "@types/debug": "^4.1.12",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.19.9",
+    "mkdirp": "^1.0.4",
+    "mocha": "^10.8.1",
+    "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.3.3"
+  },
+  "publishConfig": {
+    "access": "public"
+  }
 }
