--- a/packages/@textlint/source-code-fixer/package.json
+++ b/packages/@textlint/source-code-fixer/package.json
@@ -47,10 +47,11 @@
         "trailingComma": "none"
     },
     "dependencies": {
-        "@textlint/types": "^14.8.1",
+        "@textlint/types": "workspace:*",
         "debug": "^4.4.1"
     },
     "devDependencies": {
+        "@types/debug": "^4.1.12",
         "@types/mocha": "^9.1.1",
         "@types/node": "^18.19.9",
         "mocha": "^10.8.1",
