--- a/packages/@textlint/text-to-ast/package.json
+++ b/packages/@textlint/text-to-ast/package.json
@@ -43,13 +43,16 @@
         "watch": "tsc -b --watch"
     },
     "dependencies": {
-        "@textlint/ast-node-types": "^14.8.1"
+        "@textlint/ast-node-types": "workspace:*"
     },
     "devDependencies": {
-        "@textlint/ast-tester": "^14.8.1",
+        "@textlint/ast-tester": "workspace:*",
+        "@types/mocha": "^10.0.10",
+        "@types/node": "^18.19.9",
         "eol-converter-cli": "^1.1.0",
         "mocha": "^10.8.1",
         "rimraf": "^6.0.1",
+        "ts-node": "^10.9.2",
         "typescript": "~5.3.3"
     },
     "publishConfig": {
