--- a/packages/@textlint/textlint-plugin-markdown/package.json
+++ b/packages/@textlint/textlint-plugin-markdown/package.json
@@ -39,13 +39,18 @@
         "watch": "tsc -b --watch"
     },
     "dependencies": {
-        "@textlint/markdown-to-ast": "^14.8.1"
+        "@textlint/markdown-to-ast": "workspace:*",
+        "@textlint/types": "workspace:*"
     },
     "devDependencies": {
-        "@textlint/kernel": "^14.8.1",
+        "@textlint/kernel": "workspace:*",
+        "@types/mocha": "^10.0.10",
+        "@types/node": "^22.10.6",
+        "@types/react": "^18.3.18",
         "mocha": "^10.8.1",
         "rimraf": "^6.0.1",
         "textlint-rule-no-todo": "^2.0.1",
+        "ts-node": "^10.9.2",
         "typescript": "~5.3.3"
     },
     "publishConfig": {
