--- a/packages/textlint-tester/package.json
+++ b/packages/textlint-tester/package.json
@@ -38,10 +38,12 @@
         "watch": "tsc -b --watch"
     },
     "dependencies": {
-        "@textlint/feature-flag": "^14.8.1",
-        "@textlint/kernel": "^14.8.1",
-        "@textlint/textlint-plugin-markdown": "^14.8.1",
-        "@textlint/textlint-plugin-text": "^14.8.1"
+        "@textlint/ast-node-types": "workspace:*",
+        "@textlint/feature-flag": "workspace:*",
+        "@textlint/kernel": "workspace:*",
+        "@textlint/textlint-plugin-markdown": "workspace:*",
+        "@textlint/textlint-plugin-text": "workspace:*",
+        "@textlint/types": "workspace:*"
     },
     "devDependencies": {
         "@types/mocha": "^9.1.1",
