--- a/packages/textlint/package.json
+++ b/packages/textlint/package.json
@@ -47,19 +47,19 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.1",
-    "@textlint/ast-node-types": "^14.8.1",
-    "@textlint/ast-traverse": "^14.8.1",
-    "@textlint/config-loader": "^14.8.1",
-    "@textlint/feature-flag": "^14.8.1",
-    "@textlint/fixer-formatter": "^14.8.1",
-    "@textlint/kernel": "^14.8.1",
-    "@textlint/linter-formatter": "^14.8.1",
-    "@textlint/module-interop": "^14.8.1",
-    "@textlint/resolver": "^14.8.1",
-    "@textlint/textlint-plugin-markdown": "^14.8.1",
-    "@textlint/textlint-plugin-text": "^14.8.1",
-    "@textlint/types": "^14.8.1",
-    "@textlint/utils": "^14.8.1",
+    "@textlint/ast-node-types": "workspace:*",
+    "@textlint/ast-traverse": "workspace:*",
+    "@textlint/config-loader": "workspace:*",
+    "@textlint/feature-flag": "workspace:*",
+    "@textlint/fixer-formatter": "workspace:*",
+    "@textlint/kernel": "workspace:*",
+    "@textlint/linter-formatter": "workspace:*",
+    "@textlint/module-interop": "workspace:*",
+    "@textlint/resolver": "workspace:*",
+    "@textlint/textlint-plugin-markdown": "workspace:*",
+    "@textlint/textlint-plugin-text": "workspace:*",
+    "@textlint/types": "workspace:*",
+    "@textlint/utils": "workspace:*",
     "debug": "^4.4.1",
     "file-entry-cache": "^10.0.5",
     "glob": "^10.4.5",
@@ -75,8 +75,9 @@
     "zod": "^3.25.56"
   },
   "devDependencies": {
-    "@textlint/legacy-textlint-core": "^14.8.1",
+    "@textlint/legacy-textlint-core": "workspace:*",
     "@types/clone": "^2.1.4",
+    "@types/debug": "^4.1.12",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.19.9",
