chore(pnpm): use pnpm catalog

--- a/examples/cli/package.json
+++ b/examples/cli/package.json
@@ -13,7 +13,7 @@
     },
     "devDependencies": {
         "textlint": "workspace:*",
-        "textlint-rule-no-todo": "^2.0.1"
+        "textlint-rule-no-todo": "catalog:"
     },
     "files": [
         "bin/",
