--- a/examples/use-as-module/package.json
+++ b/examples/use-as-module/package.json
@@ -11,7 +11,7 @@
     },
     "dependencies": {
         "textlint": "workspace:*",
-        "textlint-rule-no-todo": "^2.0.1"
+        "textlint-rule-no-todo": "catalog:"
     },
     "files": [
         "bin/",
