--- a/packages/@textlint/resolver/package.json
+++ b/packages/@textlint/resolver/package.json
@@ -47,12 +47,12 @@
     "tabWidth": 4
   },
   "devDependencies": {
-    "@types/debug": "^4.1.12",
+    "@types/debug": "catalog:",
     "@types/mocha": "^10.0.10",
     "@types/node": "^20.16.12",
-    "mocha": "^10.8.1",
+    "mocha": "catalog:",
     "prettier": "^2.8.1",
-    "ts-node": "^10.9.2",
+    "ts-node": "catalog:",
     "typescript": "^5.1.6"
   },
   "publishConfig": {
