--- a/packages/textlint/package.json
+++ b/packages/textlint/package.json
@@ -46,7 +46,7 @@
     "watch": "tsc -b --watch"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.12.1",
+    "@modelcontextprotocol/sdk": "catalog:",
     "@textlint/ast-node-types": "workspace:*",
     "@textlint/ast-traverse": "workspace:*",
     "@textlint/config-loader": "workspace:*",
@@ -60,39 +60,39 @@
     "@textlint/textlint-plugin-text": "workspace:*",
     "@textlint/types": "workspace:*",
     "@textlint/utils": "workspace:*",
-    "debug": "^4.4.1",
-    "file-entry-cache": "^10.0.5",
-    "glob": "^10.4.5",
-    "md5": "^2.3.0",
+    "debug": "catalog:",
+    "file-entry-cache": "catalog:",
+    "glob": "catalog:",
+    "md5": "catalog:",
     "mkdirp": "^0.5.6",
-    "optionator": "^0.9.3",
-    "path-to-glob-pattern": "^2.0.1",
-    "rc-config-loader": "^4.1.3",
-    "read-pkg": "^1.1.0",
-    "read-pkg-up": "^3.0.0",
-    "structured-source": "^4.0.0",
-    "unique-concat": "^0.2.2",
-    "zod": "^3.25.56"
+    "optionator": "catalog:",
+    "path-to-glob-pattern": "catalog:",
+    "rc-config-loader": "catalog:",
+    "read-pkg": "catalog:",
+    "read-pkg-up": "catalog:",
+    "structured-source": "catalog:",
+    "unique-concat": "catalog:",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@textlint/legacy-textlint-core": "workspace:*",
-    "@types/clone": "^2.1.4",
-    "@types/debug": "^4.1.12",
-    "@types/glob": "^8.1.0",
+    "@types/clone": "catalog:",
+    "@types/debug": "catalog:",
+    "@types/glob": "catalog:",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.19.9",
-    "@types/read-pkg-up": "^3.0.1",
-    "@types/shelljs": "^0.8.15",
-    "clone": "^2.1.2",
-    "mocha": "^10.8.1",
-    "rimraf": "^6.0.1",
+    "@types/read-pkg-up": "catalog:",
+    "@types/shelljs": "catalog:",
+    "clone": "catalog:",
+    "mocha": "catalog:",
+    "rimraf": "catalog:",
     "shelljs": "^0.10.0",
     "textlint-plugin-html": "^0.3.0",
-    "textlint-rule-helper": "^2.3.1",
-    "textlint-rule-no-todo": "^2.0.1",
-    "textlint-rule-preset-ja-spacing": "^2.4.1",
+    "textlint-rule-helper": "catalog:",
+    "textlint-rule-no-todo": "catalog:",
+    "textlint-rule-preset-ja-spacing": "catalog:",
     "textlint-rule-preset-jtf-style": "^2.3.14",
-    "ts-node": "^10.9.2",
+    "ts-node": "catalog:",
     "typescript": "~5.3.3"
   },
   "engines": {
