--- a/examples/html-plugin/package.json
+++ b/examples/html-plugin/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "textlint": "workspace:*",
         "textlint-plugin-html": "^0.2.0",
-        "textlint-rule-sentence-length": "^2.1.2"
+        "textlint-rule-sentence-length": "catalog:"
     },
     "files": [
         "bin/",
