--- a/examples/plugin-extensions-option/package.json
+++ b/examples/plugin-extensions-option/package.json
@@ -10,9 +10,9 @@
         "textlint": "textlint -f pretty-error test.custom-ext"
     },
     "devDependencies": {
-        "expected-exit-status": "^1.0.2",
+        "expected-exit-status": "catalog:",
         "textlint": "workspace:*",
-        "textlint-rule-no-todo": "^2.0.1"
+        "textlint-rule-no-todo": "catalog:"
     },
     "files": [
         "bin/",
