--- a/examples/use-as-ts-module/package.json
+++ b/examples/use-as-ts-module/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "textlint": "workspace:*",
-    "textlint-rule-no-todo": "^2.0.1"
+    "textlint-rule-no-todo": "catalog:"
   },
   "devDependencies": {
     "@types/node": "^18.7.16",
