--- a/packages/@textlint/ast-traverse/package.json
+++ b/packages/@textlint/ast-traverse/package.json
@@ -44,9 +44,9 @@
         "@textlint/markdown-to-ast": "workspace:*",
         "@types/mocha": "^9.1.1",
         "@types/node": "^18.19.9",
-        "mocha": "^10.8.1",
-        "rimraf": "^6.0.1",
-        "ts-node": "^10.9.2",
+        "mocha": "catalog:",
+        "rimraf": "catalog:",
+        "ts-node": "catalog:",
         "typescript": "~5.3.3"
     },
     "publishConfig": {
