--- a/packages/@textlint/config-loader/package.json
+++ b/packages/@textlint/config-loader/package.json
@@ -50,17 +50,17 @@
         "@textlint/resolver": "workspace:*",
         "@textlint/types": "workspace:*",
         "@textlint/utils": "workspace:*",
-        "debug": "^4.4.1",
-        "rc-config-loader": "^4.1.3"
+        "debug": "catalog:",
+        "rc-config-loader": "catalog:"
     },
     "devDependencies": {
-        "@types/debug": "^4.1.12",
+        "@types/debug": "catalog:",
         "@types/mocha": "^9.1.1",
         "@types/node": "^18.19.9",
-        "mocha": "^10.8.1",
+        "mocha": "catalog:",
         "prettier": "^2.3.0",
-        "rimraf": "^6.0.1",
-        "ts-node": "^10.9.2",
+        "rimraf": "catalog:",
+        "ts-node": "catalog:",
         "typescript": "~5.6.3"
     },
     "publishConfig": {
