--- a/packages/@textlint/linter-formatter/package.json
+++ b/packages/@textlint/linter-formatter/package.json
@@ -33,33 +33,33 @@
     "test": "mocha"
   },
   "dependencies": {
-    "@azu/format-text": "^1.0.2",
-    "@azu/style-format": "^1.0.1",
+    "@azu/format-text": "catalog:",
+    "@azu/style-format": "catalog:",
     "@textlint/module-interop": "workspace:*",
     "@textlint/resolver": "workspace:*",
     "@textlint/types": "workspace:*",
-    "chalk": "^4.1.2",
-    "debug": "^4.4.1",
-    "js-yaml": "^3.14.1",
-    "lodash": "^4.17.21",
-    "pluralize": "^2.0.0",
-    "string-width": "^4.2.3",
-    "strip-ansi": "^6.0.1",
-    "table": "^6.9.0",
-    "text-table": "^0.2.0"
+    "chalk": "catalog:",
+    "debug": "catalog:",
+    "js-yaml": "catalog:",
+    "lodash": "catalog:",
+    "pluralize": "catalog:",
+    "string-width": "catalog:",
+    "strip-ansi": "catalog:",
+    "table": "catalog:",
+    "text-table": "catalog:"
   },
   "devDependencies": {
-    "@types/debug": "^4.1.12",
-    "@types/js-yaml": "^3.12.10",
-    "@types/lodash": "^4.17.0",
+    "@types/debug": "catalog:",
+    "@types/js-yaml": "catalog:",
+    "@types/lodash": "catalog:",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.19.9",
-    "chai": "^4.5.0",
-    "mocha": "^10.8.1",
-    "proxyquire": "^2.1.3",
-    "rimraf": "^6.0.1",
-    "sinon": "^1.17.7",
-    "ts-node": "^10.9.2",
+    "chai": "catalog:",
+    "mocha": "catalog:",
+    "proxyquire": "catalog:",
+    "rimraf": "catalog:",
+    "sinon": "catalog:",
+    "ts-node": "catalog:",
     "typescript": "~5.3.3"
   },
   "publishConfig": {
