--- a/packages/@textlint/markdown-to-ast/package.json
+++ b/packages/@textlint/markdown-to-ast/package.json
@@ -36,25 +36,25 @@
   },
   "dependencies": {
     "@textlint/ast-node-types": "workspace:*",
-    "debug": "^4.4.1",
-    "mdast-util-gfm-autolink-literal": "^0.1.3",
-    "neotraverse": "^0.6.15",
-    "remark-footnotes": "^3.0.0",
-    "remark-frontmatter": "^3.0.0",
-    "remark-gfm": "^1.0.0",
-    "remark-parse": "^9.0.0",
-    "unified": "^9.2.2"
+    "debug": "catalog:",
+    "mdast-util-gfm-autolink-literal": "catalog:",
+    "neotraverse": "catalog:",
+    "remark-footnotes": "catalog:",
+    "remark-frontmatter": "catalog:",
+    "remark-gfm": "catalog:",
+    "remark-parse": "catalog:",
+    "unified": "catalog:"
   },
   "devDependencies": {
     "@textlint/ast-tester": "workspace:*",
-    "@types/unist": "^3.0.3",
-    "@types/debug": "^4.1.12",
+    "@types/unist": "catalog:",
+    "@types/debug": "catalog:",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.19.9",
     "mkdirp": "^1.0.4",
-    "mocha": "^10.8.1",
-    "rimraf": "^6.0.1",
-    "ts-node": "^10.9.2",
+    "mocha": "catalog:",
+    "rimraf": "catalog:",
+    "ts-node": "catalog:",
     "typescript": "~5.3.3"
   },
   "publishConfig": {
