--- a/packages/@textlint/module-interop/package.json
+++ b/packages/@textlint/module-interop/package.json
@@ -50,10 +50,10 @@
     "devDependencies": {
         "@types/mocha": "^9.1.1",
         "@types/node": "^18.19.9",
-        "mocha": "^10.8.1",
+        "mocha": "catalog:",
         "prettier": "^2.7.1",
-        "rimraf": "^6.0.1",
-        "ts-node": "^10.9.2",
+        "rimraf": "catalog:",
+        "ts-node": "catalog:",
         "typescript": "~5.3.3"
     },
     "publishConfig": {
