--- a/packages/@textlint/types/package.json
+++ b/packages/@textlint/types/package.json
@@ -51,12 +51,12 @@
         "@textlint/markdown-to-ast": "workspace:*",
         "@types/mocha": "^9.1.1",
         "@types/node": "^18.19.9",
-        "mocha": "^10.8.1",
+        "mocha": "catalog:",
         "prettier": "^2.7.1",
-        "rimraf": "^6.0.1",
-        "ts-node": "^10.9.2",
+        "rimraf": "catalog:",
+        "ts-node": "catalog:",
         "typescript": "~5.3.3",
-        "unist-util-select": "^3.0.4"
+        "unist-util-select": "catalog:"
     },
     "publishConfig": {
         "access": "public"
