--- a/packages/textlint-scripts/examples/example/package.json
+++ b/packages/textlint-scripts/examples/example/package.json
@@ -11,7 +11,7 @@
     "test": "textlint-scripts test"
   },
   "dependencies": {
-    "prh": "^5.4.4"
+    "prh": "catalog:"
   },
   "devDependencies": {
     "textlint-scripts": "workspace:*"
