--- a/packages/textlint-tester/package.json
+++ b/packages/textlint-tester/package.json
@@ -48,14 +48,14 @@
     "devDependencies": {
         "@types/mocha": "^9.1.1",
         "@types/node": "^18.19.9",
-        "analyze-desumasu-dearu": "^4.0.1",
-        "match-index": "^1.0.3",
-        "mocha": "^10.8.1",
-        "rimraf": "^6.0.1",
+        "analyze-desumasu-dearu": "catalog:",
+        "match-index": "catalog:",
+        "mocha": "catalog:",
+        "rimraf": "catalog:",
         "textlint-plugin-html": "^0.3.0",
-        "textlint-rule-helper": "^2.3.1",
-        "textlint-rule-max-number-of-lines": "^1.0.3",
-        "ts-node": "^10.9.2",
+        "textlint-rule-helper": "catalog:",
+        "textlint-rule-max-number-of-lines": "catalog:",
+        "ts-node": "catalog:",
         "typescript": "~5.3.3"
     },
     "email": "azuciao@gmail.com"
