--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,7 +2,6 @@
 verifyDepsBeforeRun: "install"
 onlyBuiltDependencies:
   - nx
-
 packages:
   - packages/*
   - examples/*
@@ -15,4 +14,104 @@ packages:
 # This prevents version conflicts where some packages might reference old versions (e.g., 13.4.1)
 # that cause TypeScript type incompatibility errors in monorepo
 overrides:
-  "@textlint/ast-node-types": "workspace:*"
+  "@textlint/ast-node-types": workspace:*
+catalog:
+  "@azu/format-text": ^1.0.2
+  "@azu/style-format": ^1.0.1
+  "@babel/cli": ^7.27.2
+  "@babel/core": ^7.27.4
+  "@babel/preset-env": ^7.27.2
+  "@babel/preset-typescript": ^7.27.1
+  "@babel/register": ^7.27.1
+  "@docusaurus/core": ^3.8.1
+  "@docusaurus/module-type-aliases": ^3.8.1
+  "@docusaurus/plugin-client-redirects": ^3.8.1
+  "@docusaurus/preset-classic": ^3.8.1
+  "@mdx-js/react": ^3.1.0
+  "@modelcontextprotocol/sdk": ^1.12.1
+  "@monorepo-utils/workspaces-to-typescript-project-references": ^2.11.0
+  "@types/clone": ^2.1.4
+  "@types/debug": ^4.1.12
+  "@types/diff": ^4.0.2
+  "@types/glob": ^8.1.0
+  "@types/js-yaml": ^3.12.10
+  "@types/lodash": ^4.17.0
+  "@types/react": ^18.3.18
+  "@types/read-pkg-up": ^3.0.1
+  "@types/shelljs": ^0.8.15
+  "@types/unist": ^3.0.3
+  "@typescript-eslint/eslint-plugin": ^5.62.0
+  "@typescript-eslint/parser": ^5.62.0
+  ajv: ^8.17.1
+  analyze-desumasu-dearu: ^4.0.1
+  babel-plugin-static-fs: ^3.0.0
+  chai: ^4.5.0
+  chalk: ^4.1.2
+  clone: ^2.1.2
+  confirmer: ^1.1.2
+  cross-spawn: ^7.0.3
+  debug: ^4.4.1
+  diff: ^5.2.0
+  eol-converter-cli: ^1.1.0
+  eslint: ^8.23.0
+  eslint-config-prettier: ^8.10.0
+  eslint-plugin-prettier: ^4.2.1
+  expected-exit-status: ^1.0.2
+  fast-equals: ^4.0.3
+  file-entry-cache: ^10.0.5
+  glob: ^10.4.5
+  js-yaml: ^3.14.1
+  json5: ^2.1.1
+  lerna: ^8.2.2
+  lint-staged: ^13.3.0
+  lodash: ^4.17.21
+  match-index: ^1.0.3
+  md5: ^2.3.0
+  mdast-util-gfm-autolink-literal: ^0.1.3
+  mocha: ^10.8.1
+  neotraverse: ^0.6.15
+  npm-run-all2: ^5.0.2
+  optionator: ^0.9.3
+  path-to-glob-pattern: ^2.0.1
+  pkg-to-readme: ^3.0.1
+  pluralize: ^2.0.0
+  prh: ^5.4.4
+  prism-react-renderer: ^2.4.1
+  proxyquire: ^2.1.3
+  rc-config-loader: ^4.1.3
+  react: ^19.1.0
+  react-dom: ^19.1.0
+  read-pkg: ^1.1.0
+  read-pkg-up: ^3.0.0
+  remark-footnotes: ^3.0.0
+  remark-frontmatter: ^3.0.0
+  remark-gfm: ^1.0.0
+  remark-parse: ^9.0.0
+  rimraf: ^6.0.1
+  semver: ^5.3.0
+  sinon: ^1.17.7
+  string-width: ^4.2.3
+  strip-ansi: ^6.0.1
+  structured-source: ^4.0.0
+  table: ^6.9.0
+  text-table: ^0.2.0
+  textlint-filter-rule-comments: ^1.2.2
+  textlint-rule-eslint: ^4.0.2
+  textlint-rule-helper: ^2.3.1
+  textlint-rule-max-number-of-lines: ^1.0.3
+  textlint-rule-max-ten: ^2.0.3
+  textlint-rule-no-mix-dearu-desumasu: ^3.0.3
+  textlint-rule-no-start-duplicated-conjunction: ^2.0.2
+  textlint-rule-no-todo: ^2.0.1
+  textlint-rule-preset-ja-spacing: ^2.4.1
+  textlint-rule-preset-ja-technical-writing: ^7.0.0
+  textlint-rule-rousseau: ^1.4.8
+  textlint-rule-sentence-length: ^2.1.2
+  textlint-rule-spellcheck-tech-word: ^5.0.0
+  textlint-rule-unexpanded-acronym: ^1.2.4
+  textlintrc-to-package-list: ^3.0.3
+  ts-node: ^10.9.2
+  unified: ^9.2.2
+  unique-concat: ^0.2.2
+  unist-util-select: ^3.0.4
+  zod: ^3.25.56
