--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -16,20 +16,16 @@ packages:
 overrides:
   "@textlint/ast-node-types": workspace:*
 catalog:
-  "@azu/format-text": ^1.0.2
-  "@azu/style-format": ^1.0.1
+  # Build & Development Tools
+  # Babel ecosystem - Transform and compilation tools
   "@babel/cli": ^7.27.2
   "@babel/core": ^7.27.4
   "@babel/preset-env": ^7.27.2
   "@babel/preset-typescript": ^7.27.1
   "@babel/register": ^7.27.1
-  "@docusaurus/core": ^3.8.1
-  "@docusaurus/module-type-aliases": ^3.8.1
-  "@docusaurus/plugin-client-redirects": ^3.8.1
-  "@docusaurus/preset-classic": ^3.8.1
-  "@mdx-js/react": ^3.1.0
-  "@modelcontextprotocol/sdk": ^1.12.1
-  "@monorepo-utils/workspaces-to-typescript-project-references": ^2.11.0
+  babel-plugin-static-fs: ^3.0.0
+
+  # TypeScript & Types
   "@types/clone": ^2.1.4
   "@types/debug": ^4.1.12
   "@types/diff": ^4.0.2
@@ -40,78 +36,120 @@ catalog:
   "@types/read-pkg-up": ^3.0.1
   "@types/shelljs": ^0.8.15
   "@types/unist": ^3.0.3
-  "@typescript-eslint/eslint-plugin": ^5.62.0
-  "@typescript-eslint/parser": ^5.62.0
-  ajv: ^8.17.1
-  analyze-desumasu-dearu: ^4.0.1
-  babel-plugin-static-fs: ^3.0.0
-  chai: ^4.5.0
-  chalk: ^4.1.2
-  clone: ^2.1.2
-  confirmer: ^1.1.2
-  cross-spawn: ^7.0.3
-  debug: ^4.4.1
-  diff: ^5.2.0
-  eol-converter-cli: ^1.1.0
+  ts-node: ^10.9.2
+
+  # Linting & Code Quality
+  # ESLint ecosystem
   eslint: ^8.23.0
   eslint-config-prettier: ^8.10.0
   eslint-plugin-prettier: ^4.2.1
-  expected-exit-status: ^1.0.2
-  fast-equals: ^4.0.3
-  file-entry-cache: ^10.0.5
-  glob: ^10.4.5
-  js-yaml: ^3.14.1
-  json5: ^2.1.1
-  lerna: ^8.2.2
-  lint-staged: ^13.3.0
-  lodash: ^4.17.21
-  match-index: ^1.0.3
-  md5: ^2.3.0
-  mdast-util-gfm-autolink-literal: ^0.1.3
+  "@typescript-eslint/eslint-plugin": ^5.62.0
+  "@typescript-eslint/parser": ^5.62.0
+
+  # Testing Framework
   mocha: ^10.8.1
-  neotraverse: ^0.6.15
-  npm-run-all2: ^5.0.2
-  optionator: ^0.9.3
-  path-to-glob-pattern: ^2.0.1
-  pkg-to-readme: ^3.0.1
-  pluralize: ^2.0.0
-  prh: ^5.4.4
-  prism-react-renderer: ^2.4.1
+  chai: ^4.5.0
+  sinon: ^1.17.7
   proxyquire: ^2.1.3
-  rc-config-loader: ^4.1.3
+  expected-exit-status: ^1.0.2
+
+  # Monorepo & Project Management
+  lerna: ^8.2.2
+  "@monorepo-utils/workspaces-to-typescript-project-references": ^2.11.0
+  lint-staged: ^13.3.0
+  npm-run-all2: ^5.0.2
+
+  # Documentation Website (Docusaurus ecosystem)
+  "@docusaurus/core": ^3.8.1
+  "@docusaurus/module-type-aliases": ^3.8.1
+  "@docusaurus/plugin-client-redirects": ^3.8.1
+  "@docusaurus/preset-classic": ^3.8.1
+  "@mdx-js/react": ^3.1.0
+  prism-react-renderer: ^2.4.1
   react: ^19.1.0
   react-dom: ^19.1.0
-  read-pkg: ^1.1.0
-  read-pkg-up: ^3.0.0
+
+  # AST & Parsing (Unified ecosystem)
+  unified: ^9.2.2
   remark-footnotes: ^3.0.0
   remark-frontmatter: ^3.0.0
   remark-gfm: ^1.0.0
   remark-parse: ^9.0.0
-  rimraf: ^6.0.1
-  semver: ^5.3.0
-  sinon: ^1.17.7
-  string-width: ^4.2.3
-  strip-ansi: ^6.0.1
-  structured-source: ^4.0.0
-  table: ^6.9.0
-  text-table: ^0.2.0
-  textlint-filter-rule-comments: ^1.2.2
-  textlint-rule-eslint: ^4.0.2
+  mdast-util-gfm-autolink-literal: ^0.1.3
+  unist-util-select: ^3.0.4
+  neotraverse: ^0.6.15
+
+  # Textlint Rules & Filters
+  # Core textlint utilities
   textlint-rule-helper: ^2.3.1
+  textlint-filter-rule-comments: ^1.2.2
+  textlintrc-to-package-list: ^3.0.3
+
+  # textlint rules for examples
+  textlint-rule-no-todo: ^2.0.1
   textlint-rule-max-number-of-lines: ^1.0.3
+  textlint-rule-sentence-length: ^2.1.2
+  textlint-rule-eslint: ^4.0.2
+  textlint-rule-rousseau: ^1.4.8
+  textlint-rule-unexpanded-acronym: ^1.2.4
+  textlint-rule-spellcheck-tech-word: ^5.0.0
   textlint-rule-max-ten: ^2.0.3
   textlint-rule-no-mix-dearu-desumasu: ^3.0.3
   textlint-rule-no-start-duplicated-conjunction: ^2.0.2
-  textlint-rule-no-todo: ^2.0.1
   textlint-rule-preset-ja-spacing: ^2.4.1
   textlint-rule-preset-ja-technical-writing: ^7.0.0
-  textlint-rule-rousseau: ^1.4.8
-  textlint-rule-sentence-length: ^2.1.2
-  textlint-rule-spellcheck-tech-word: ^5.0.0
-  textlint-rule-unexpanded-acronym: ^1.2.4
-  textlintrc-to-package-list: ^3.0.3
-  ts-node: ^10.9.2
-  unified: ^9.2.2
+  analyze-desumasu-dearu: ^4.0.1
+  prh: ^5.4.4
+
+  # Core Utilities
+  # File system & path operations
+  glob: ^10.4.5
+  rimraf: ^6.0.1
+  cross-spawn: ^7.0.3
+  file-entry-cache: ^10.0.5
+  path-to-glob-pattern: ^2.0.1
+
+  # Data processing & validation
+  ajv: ^8.17.1
+  fast-equals: ^4.0.3
+  optionator: ^0.9.3
+  rc-config-loader: ^4.1.3
+
+  # String & text processing
+  chalk: ^4.1.2
+  string-width: ^4.2.3
+  strip-ansi: ^6.0.1
+  pluralize: ^2.0.0
+
+  # Data structures & algorithms
+  clone: ^2.1.2
+  lodash: ^4.17.21
   unique-concat: ^0.2.2
-  unist-util-select: ^3.0.4
+  match-index: ^1.0.3
+  structured-source: ^4.0.0
+
+  # Configuration & metadata
+  js-yaml: ^3.14.1
+  json5: ^2.1.1
+  read-pkg: ^1.1.0
+  read-pkg-up: ^3.0.0
+  semver: ^5.3.0
+
+  # Output formatting
+  table: ^6.9.0
+  text-table: ^0.2.0
+  diff: ^5.2.0
+
+  # Debug & development
+  debug: ^4.4.1
+  md5: ^2.3.0
+  confirmer: ^1.1.2
+
+  # Specialty Tools
+  "@azu/format-text": ^1.0.2
+  "@azu/style-format": ^1.0.1
+  eol-converter-cli: ^1.1.0
+  pkg-to-readme: ^3.0.1
+  # MCP
+  "@modelcontextprotocol/sdk": ^1.12.1
   zod: ^3.25.56
