--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "build": "lerna run build",
-    "website": "lerna run build --scope textlint-website",
+    "build": "lerna run build --stream",
+    "website": "pnpm run build && lerna run build --scope textlint-website",
     "clean": "lerna run clean",
     "eslint": "eslint --cache \"packages/**/{src,test}/**/*.js\"",
     "eslint:fix": "eslint --fix --cache \"packages/**/{src,test}/**/*.js\"",
@@ -18,13 +18,13 @@
     "commit-version": "git add . && git commit -m \"chore(release): v`node -p 'require(\"./lerna.json\").version'`\"",
     "release": "lerna publish from-package",
     "ci:release": "lerna publish from-package --yes",
-    "test": "npm-run-all --parallel lint test:projectReferences test:packages",
+    "test": "npm-run-all --parallel lint test:projectReferences && npm-run-all test:packages",
     "updateSnapshot": "lerna run updateSnapshot",
     "test:all": "npm-run-all test test:examples test:integration test:docs",
-    "test:docs": "lerna run test --scope textlint-website",
-    "test:examples": "lerna run test:ci --scope textlint-example-*",
-    "test:integration": "lerna run test --scope integration-test",
-    "test:packages": "lerna run test --ignore integration-test --ignore textlint-example-* --ignore textlint-script-* --ignore textlint-website",
+    "test:docs": "pnpm run build && lerna run test --scope textlint-website",
+    "test:examples": "pnpm run build && lerna run test:ci --scope textlint-example-*",
+    "test:integration": "pnpm run build && lerna run test --scope integration-test",
+    "test:packages": "pnpm run build && lerna run test --ignore integration-test --ignore textlint-example-* --ignore textlint-script-* --ignore textlint-website",
     "test:projectReferences": "workspaces-to-typescript-project-references --includesRoot --check",
     "update:projectReferences": "workspaces-to-typescript-project-references --includesRoot ",
     "type-check": "tsc -b .",
