--- a/packages/@textlint/config-loader/package.json
+++ b/packages/@textlint/config-loader/package.json
@@ -37,8 +37,7 @@
     "updateSnapshot": "UPDATE_SNAPSHOT=1 npm test",
     "watch": "tsc -b . --watch",
     "test": "vitest run",
-    "test:watch": "vitest watch",
-    "coverage": "vitest run --coverage"
+    "test:watch": "vitest watch"
   },
   "prettier": {
     "printWidth": 120,
@@ -62,8 +61,7 @@
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3",
-    "vitest": "^1.0.1",
-    "@vitest/coverage-v8": "^1.0.1"
+    "vitest": "^3.2.3"
   },
   "publishConfig": {
     "access": "public"
