--- a/packages/@textlint/text-to-ast/package.json
+++ b/packages/@textlint/text-to-ast/package.json
@@ -41,8 +41,7 @@
     "updateSnapshot": "UPDATE_SNAPSHOT=1 npm test",
     "watch": "tsc -b --watch",
     "test": "vitest run",
-    "test:watch": "vitest watch",
-    "coverage": "vitest run --coverage"
+    "test:watch": "vitest watch"
   },
   "dependencies": {
     "@textlint/ast-node-types": "workspace:*"
@@ -54,8 +53,7 @@
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3",
-    "vitest": "^1.0.1",
-    "@vitest/coverage-v8": "^1.0.1"
+    "vitest": "^3.2.3"
   },
   "publishConfig": {
     "access": "public"
