--- a/packages/@textlint/textlint-plugin-text/package.json
+++ b/packages/@textlint/textlint-plugin-text/package.json
@@ -32,8 +32,7 @@
     "prepack": "npm run --if-present build",
     "watch": "tsc -b --watch",
     "test": "vitest run",
-    "test:watch": "vitest watch",
-    "coverage": "vitest run --coverage"
+    "test:watch": "vitest watch"
   },
   "dependencies": {
     "@textlint/text-to-ast": "workspace:*",
@@ -47,8 +46,7 @@
     "textlint-rule-no-todo": "^2.0.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3",
-    "vitest": "^1.0.1",
-    "@vitest/coverage-v8": "^1.0.1"
+    "vitest": "^3.2.3"
   },
   "publishConfig": {
     "access": "public"
