--- a/packages/@textlint/types/package.json
+++ b/packages/@textlint/types/package.json
@@ -55,8 +55,7 @@
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3",
     "unist-util-select": "^3.0.4",
-    "vitest": "^1.0.1",
-    "@vitest/coverage-v8": "^1.0.1"
+    "vitest": "^3.2.3"
   },
   "publishConfig": {
     "access": "public"
