--- a/packages/@textlint/utils/package.json
+++ b/packages/@textlint/utils/package.json
@@ -38,8 +38,7 @@
     "prepack": "npm run --if-present build",
     "watch": "tsc -b --watch",
     "test": "vitest run",
-    "test:watch": "vitest watch",
-    "coverage": "vitest run --coverage"
+    "test:watch": "vitest watch"
   },
   "prettier": {
     "printWidth": 120,
@@ -52,8 +51,7 @@
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3",
-    "vitest": "^1.0.1",
-    "@vitest/coverage-v8": "^1.0.1"
+    "vitest": "^3.2.3"
   },
   "publishConfig": {
     "access": "public"
