--- a/packages/textlint-tester/package.json
+++ b/packages/textlint-tester/package.json
@@ -36,8 +36,7 @@
     "prepack": "npm run --if-present build",
     "watch": "tsc -b --watch",
     "test": "vitest run",
-    "test:watch": "vitest watch",
-    "coverage": "vitest run --coverage"
+    "test:watch": "vitest watch"
   },
   "dependencies": {
     "@textlint/ast-node-types": "workspace:*",
@@ -57,8 +56,7 @@
     "textlint-rule-max-number-of-lines": "^1.0.3",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3",
-    "vitest": "^1.0.1",
-    "@vitest/coverage-v8": "^1.0.1"
+    "vitest": "^3.2.3"
   },
   "email": "azuciao@gmail.com"
 }
