--- a/packages/textlint-tester/package.json
+++ b/packages/textlint-tester/package.json
@@ -1,62 +1,62 @@
 {
-  "name": "textlint-tester",
-  "version": "14.8.1",
-  "description": "testing tool for textlint rule.",
-  "keywords": [
-    "test",
-    "testing",
-    "textlint"
-  ],
-  "homepage": "https://github.com/textlint/textlint/tree/master/packages/textlint-tester/",
-  "bugs": {
-    "url": "https://github.com/textlint/textlint/issues"
-  },
-  "license": "MIT",
-  "author": "azu",
-  "type": "commonjs",
-  "files": [
-    "bin/",
-    "lib/",
-    "module/",
-    "src/",
-    "!*.tsbuildinfo"
-  ],
-  "main": "lib/src/index.js",
-  "types": "lib/src/index.d.ts",
-  "directories": {
-    "test": "test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/textlint/textlint.git"
-  },
-  "scripts": {
-    "build": "tsc -b",
-    "clean": "rimraf lib/ out/",
-    "prepack": "npm run --if-present build",
-    "watch": "tsc -b --watch",
-    "test": "vitest run",
-    "test:watch": "vitest watch"
-  },
-  "dependencies": {
-    "@textlint/ast-node-types": "workspace:*",
-    "@textlint/feature-flag": "workspace:*",
-    "@textlint/kernel": "workspace:*",
-    "@textlint/textlint-plugin-markdown": "workspace:*",
-    "@textlint/textlint-plugin-text": "workspace:*",
-    "@textlint/types": "workspace:*"
-  },
-  "devDependencies": {
-    "@types/node": "^18.19.111",
-    "analyze-desumasu-dearu": "^4.0.1",
-    "match-index": "^1.0.3",
-    "rimraf": "^6.0.1",
-    "textlint-plugin-html": "^0.3.0",
-    "textlint-rule-helper": "^2.3.1",
-    "textlint-rule-max-number-of-lines": "^1.0.3",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.3.3",
-    "vitest": "^3.2.3"
-  },
-  "email": "azuciao@gmail.com"
+    "name": "textlint-tester",
+    "version": "14.8.1",
+    "description": "testing tool for textlint rule.",
+    "keywords": [
+        "test",
+        "testing",
+        "textlint"
+    ],
+    "homepage": "https://github.com/textlint/textlint/tree/master/packages/textlint-tester/",
+    "bugs": {
+        "url": "https://github.com/textlint/textlint/issues"
+    },
+    "license": "MIT",
+    "author": "azu",
+    "type": "commonjs",
+    "files": [
+        "bin/",
+        "lib/",
+        "module/",
+        "src/",
+        "!*.tsbuildinfo"
+    ],
+    "main": "lib/src/index.js",
+    "types": "lib/src/index.d.ts",
+    "directories": {
+        "test": "test"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/textlint/textlint.git"
+    },
+    "scripts": {
+        "build": "tsc -b",
+        "clean": "rimraf lib/ out/",
+        "prepack": "npm run --if-present build",
+        "test": "mocha",
+        "watch": "tsc -b --watch"
+    },
+    "dependencies": {
+        "@textlint/ast-node-types": "workspace:*",
+        "@textlint/feature-flag": "workspace:*",
+        "@textlint/kernel": "workspace:*",
+        "@textlint/textlint-plugin-markdown": "workspace:*",
+        "@textlint/textlint-plugin-text": "workspace:*",
+        "@textlint/types": "workspace:*"
+    },
+    "devDependencies": {
+        "@types/mocha": "^9.1.1",
+        "@types/node": "^18.19.111",
+        "analyze-desumasu-dearu": "^4.0.1",
+        "match-index": "^1.0.3",
+        "mocha": "^10.8.2",
+        "rimraf": "^6.0.1",
+        "textlint-plugin-html": "^0.3.0",
+        "textlint-rule-helper": "^2.3.1",
+        "textlint-rule-max-number-of-lines": "^1.0.3",
+        "ts-node": "^10.9.2",
+        "typescript": "~5.3.3"
+    },
+    "email": "azuciao@gmail.com"
 }
